--- a/css/style.css
+++ b/css/style.css
@@ -3318,107 +3318,7 @@ button:hover{
     outline: 0 none;
 }
 
-/******************************************************************/
-
-/*.panel-edicion{*/
-    /*background: #F3EFE6;*/
-    /*position: relative;*/
-    /*z-index: 100;*/
-    /*width: 100%;*/
-    /*height: 0;*/
-    /*margin-top: 100%;*/
-    /*overflow-x: hidden;*/
-    /*overflow-y: auto;*/
-
-        /*-moz-user-select: auto !important;*/
-        /*-webkit-user-select: auto !important;*/
-        /*-ms-user-select: auto !important;*/
-        /*-o-user-select: auto !important;*/
-    /*user-select: auto !important;*/
-/*}*/
-
-/*.panel-edicion .titulo{*/
-    /*color: #747273;*/
-    /*border-bottom: 1px solid #747273;*/
-/*}*/
-
-/*.panel-edicion form{*/
-    /*display: none;*/
-    /*margin-bottom: 15%;*/
-/*}*/
-
-/*.panel-edicion .datos-botones{*/
-    /*border-top: 1px solid #747273;*/
-    /*padding-top: 10px;*/
-    /*padding-bottom: 20px;*/
-/*}*/
-
-/*.panel-edicion-activo form{*/
-    /*display: block !important;o;*/
-/*}*/
-
-/*.panel-edicion form table{*/
-    /*border-collapse: separate;*/
-    /*width: 91.5%;*/
-    /*padding: 0;*/
-    /*text-align: left;*/
-    /*margin: 0 auto;*/
-    /*border-spacing: 0px 10px;*/
-    /*font-size: 16px;*/
-/*}*/
-
-/*.panel-edicion form table td{*/
-    /*border-width: 1px 0 1px 0;*/
-    /*border-style: solid;*/
-    /*border-color: #aaa;*/
-/*}*/
-
-/*.panel-edicion form table tr td:first-child{*/
-    /*width: 1px;*/
-    /*white-space: nowrap;*/
-    /*padding-top: 5px;*/
-    /*padding-left: 8px;*/
-    /*padding-bottom: 5px;*/
-    /*border-width: 1px 0 1px 1px !important;*/
-    /*border-style: solid;*/
-    /*border-color: #aaa;*/
-    /*vertical-align: middle;*/
-/*}*/
-
-/*.panel-edicion form table tr td:last-child{*/
-    /*padding-top: 5px;*/
-    /*padding-left: 5px;*/
-    /*padding-bottom: 5px;*/
-    /*border-width: 1px 1px 1px 0 !important;*/
-    /*border-style: solid;*/
-    /*border-color: #aaa;*/
-    /*vertical-align: middle;*/
-/*}*/
-
-/*.panel-edicion form table tr{*/
-    /*margin-top: 5px;*/
-    /*background-color: #fff;*/
-/*}*/
-
-/*.panel-edicion .td-right{*/
-    /*max-width: 130px;*/
-/*}*/
-
-/*.panel-edicion form input[type="text"],*/
-/*.panel-edicion form input[type="number"],*/
-/*.panel-edicion form input[type="date"]{*/
-    /*width: 100%;*/
-    /*display: block;*/
-    /*margin: 0 auto;*/
-    /*margin-top: 5px;*/
-    /*background-color: transparent;*/
-    /*color: #747273;*/
-    /*border: 0 solid transparent;*/
-    /*font-size: 16px;*/
-    /*outline: none;*/
-/*}*/
-
-/***************** ARCHIVOS ************/
+/** ARCHIVOS DE LOS PERMISOS **/
 .archivos{
     width: 94%;
     border: 1px solid #aaa;
@@ -3523,238 +3423,6 @@ button:hover{
         -webkit-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
 }
-
-/*.panel-edicion form textarea{*/
-    /*width: 90%;*/
-    /*display: block;*/
-    /*margin: 10px auto 0 auto;*/
-    /*padding: 5px 5px 5px 8px;*/
-    /*background-color:  transparent;*/
-    /*border: 1px solid #aaa;*/
-    /*background-color: #fff;*/
-    /*font-size: 16px;*/
-    /*outline: none;*/
-/*}*/
-
-/*.panel-edicion form select{*/
-    /*max-width: 100%;*/
-    /*margin: 0;*/
-    /*padding: 0;*/
-    /*vertical-align: middle;*/
-    /*overflow: hidden;*/
-    /*font-size: 16px;*/
-    /*background: transparent;*/
-    /*border: 0 solid transparent;*/
-    /*text-align: left;*/
-    /*-webkit-appearance: none;*/
-    /*-moz-appearance:none;*/
-    /*outline: none;*/
-/*}*/
-
-/*.chosen-centrado .select2-container{*/
-    /*width: 100% !important;*/
-    /*margin: 0 auto !important;*/
-    /*display: block;*/
-    /*padding: 0;*/
-    /*margin-top: 5px;*/
-    /*border-width: 0 !important;*/
-    /*font-size: 16px !important;*/
-/*}*/
-
-/*.select2-choices{*/
-    /*border: 1px solid #fff !important;*/
-    /*outline: none;*/
-
-    /*-webkit-box-shadow: 0 0 0 #fff !important;*/
-    /*-moz-box-shadow: 0 0 0 #fff !important;*/
-    /*box-shadow: 0 0 0 #fff !important;*/
-    /*background: none !important;*/
-/*}*/
-
-/*.panel-edicion form .chzn-container .chzn-choices{*/
-    /*width: 90% !important;*/
-    /*margin: 0 auto;*/
-    /*padding: 5px;*/
-/*}*/
-
-/*.permisos{*/
-    /*display: block;*/
-    /*margin: 0;*/
-    /*padding: 0;*/
-    /*margin-bottom: 50px;*/
-/*}*/
-
-/*.panel-side #permisos-mes{*/
-    /*font-weight: bold;*/
-    /*text-align: left;*/
-    /*padding-left: 10px;*/
-    /*background-color: #dedede;*/
-    /*border-bottom: 2px solid #757273;*/
-    /*margin-top: -1px;*/
-
-        /*-o-transition: all 1s ease-in-out;*/
-        /*-ms-transition: all 1s ease-in-out;*/
-        /*-moz-transition: all 1s ease-in-out;*/
-        /*-webkit-transition: all 1s ease-in-out;*/
-    /*transition: all 1s ease-in-out;*/
-/*}*/
-
-/*.panel-side:hover  #permisos-mes{*/
-    /*color: #fff;*/
-    /*background-color: #8f8f8f;*/
-
-        /*-o-transition: all 1s ease-in-out;*/
-        /*-ms-transition: all 1s ease-in-out;*/
-        /*-moz-transition: all 1s ease-in-out;*/
-        /*-webkit-transition: all 1s ease-in-out;*/
-    /*transition: all 1s ease-in-out;*/
-/*}*/
-
-/*.panel-side:hover  #permisos-mes .button-simbolo{*/
-    /*color: #fff;*/
-/*}*/
-
-/*.permisos li{*/
-    /*background-color: #f3efe6;*/
-    /*border-bottom: 2px solid #757273;*/
-    /*padding: 0;*/
-
-        /*-o-transition: all 2s ease-in-out;*/
-        /*-ms-transition: all 2s ease-in-out;*/
-        /*-moz-transition: all 2s ease-in-out;*/
-        /*-webkit-transition: all 2s ease-in-out;*/
-    /*transition: all 2s ease-in-out;*/
-/*}*/
-
-/*.permisos li:hover{*/
-    /*border-color: #8f8f8f;*/
-
-        /*-o-transition: all 1s ease-in-out;*/
-        /*-ms-transition: all 1s ease-in-out;*/
-        /*-moz-transition: all 1s ease-in-out;*/
-        /*-webkit-transition: all 1s ease-in-out;*/
-    /*transition: all 1s ease-in-out;*/
-/*}*/
-
-/*.permisos li:hover .permisos-nombre{*/
-    /*color: #fff;*/
-    /*background-color: #8f8f8f;*/
-        /*-o-transition: all 1s ease-in-out;*/
-        /*-ms-transition: all 1s ease-in-out;*/
-        /*-moz-transition: all 1s ease-in-out;*/
-        /*-webkit-transition: all 1s ease-in-out;*/
-    /*transition: all 1s ease-in-out;*/
-/*}*/
-
-/*.permisos li:hover .permisos-nombre .button-simbolo{*/
-    /*color: #fff;*/
-        /*-o-transition: all 1s ease-in-out;*/
-        /*-ms-transition: all 1s ease-in-out;*/
-        /*-moz-transition: all 1s ease-in-out;*/
-        /*-webkit-transition: all 1s ease-in-out;*/
-    /*transition: all 1s ease-in-out;*/
-    /*text-shadow: 0px 0px 0px transparent;*/
-/*}*/
-
-/*.permisos li span{*/
-    /*display: block;*/
-    /*width: 100%;*/
-    /*text-align: left;*/
-    /*border-bottom: 1px solid #fff;*/
-    /*padding: 5px 5px;*/
-/*}*/
-
-/*.permisos .add{*/
-    /*padding: 5px 0;*/
-/*}*/
-
-/*.permisos .add span{*/
-    /*width: 20px;*/
-    /*font-size: 20px;*/
-    /*font-weight: bold;*/
-    /*color: #999;*/
-    /*text-align: center;*/
-    /*vertical-align: middle;*/
-    /*border-radius: 15px;*/
-    /*padding: 5px;*/
-    /*display: block;*/
-    /*margin: 0 auto;*/
-    /*cursor: pointer;*/
-
-        /*-o-transition: all 4s ease-in-out;*/
-        /*-ms-transition: all 4s ease-in-out;*/
-        /*-moz-transition: all 4s ease-in-out;*/
-        /*-webkit-transition: all 4s ease-in-out;*/
-    /*transition: all 4s ease-in-out;*/
-/*}*/
-
-/*.permisos .add span:hover{*/
-    /*background-color: #a0ca48;*/
-    /*color: #fff;*/
-        /*-o-transition: all 1s ease-in-out;*/
-        /*-ms-transition: all 1s ease-in-out;*/
-        /*-moz-transition: all 1s ease-in-out;*/
-        /*-webkit-transition: all 1s ease-in-out;*/
-    /*transition: all 1s ease-in-out;*/
-/*}*/
-
-/*.permisos-nombre{*/
-    /*font-weight: bold;*/
-        /*-o-transition: all 2s ease-in-out;*/
-        /*-ms-transition: all 2s ease-in-out;*/
-        /*-moz-transition: all 2s ease-in-out;*/
-        /*-webkit-transition: all 2s ease-in-out;*/
-    /*transition: all 2s ease-in-out;*/
-/*}*/
-
-/*.permisos-nombre .button-simbolo{*/
-    /*font-size: 16px !important;*/
-    /*margin-top: -5px;*/
-    /*color: #999999;*/
-
-        /*-o-transition: all 2s ease-in-out;*/
-        /*-ms-transition: all 2s ease-in-out;*/
-        /*-moz-transition: all 2s ease-in-out;*/
-        /*-webkit-transition: all 2s ease-in-out;*/
-    /*transition: all 2s ease-in-out;*/
-/*}*/
-
-/*.permisos .tags{*/
-    /*display: block;*/
-    /*width: 100%;*/
-    /*text-align: left;*/
-    /*border: none !important;*/
-/*}*/
-
-/*.permisos .tags span{*/
-    /*display: inline-block;*/
-    /*width: auto;*/
-    /*border: 0px;*/
-/*}*/
-
-/*.permisos-archivos a{*/
-    /*display: inline-block;*/
-    /*width: auto;*/
-    /*max-width: 30%;*/
-    /*margin-left: 1%;*/
-    /*margin-right: 1%;*/
-    /*color: #000;*/
-    /*text-align: center;*/
-/*}*/
-
-/*.permisos-archivos a p{*/
-    /*color: #000;*/
-    /*font-size: 14px;*/
-/*}*/
-
-/*.permisos-archivos a img{*/
-    /*max-height: 70px;*/
-/*}*/
-
-/*.permisos-archivos a:hover p{*/
-    /*color: #fff;*/
-    /*font-size: 14px;*/
-/*}*/
 
 /**
     CALENDARIO
